--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <head>
+    <header>
         <h1>Thiago Nasciutti</h1>
         <nav>
             <ul>
@@ -15,7 +15,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </head>
+    </header>
 
     <section id="about">
 
