--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <!--Header-->
     <header>
         <h1>Thiago Nasciutti</h1>
         <nav>
@@ -17,15 +18,21 @@
         </nav>
     </header>
 
+    <!--About Me-->
     <section id="about">
-
+        <img id="photo"src="./assets/images/About.jpg" width="300px">
+        <h2>About Me</h2>
+        <p>
+            I am a motivated professional and passionated about technology who decided to end his 12 years career as Automation Engineer to pusue his dream of becoming a Full-Stack Web Developer. I am diligent, detail oriented, eager for new challenges and highly skilled in terms of problem solving and logical thinking. 
+        </p>    
     </section>
 
+    <!--Portfolio-->
     <section id="portfolio">
-
-
+   
     </section>
 
+    <!--Contact-->
     <section id="contact">
 
     </section>
