--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
     <!--About Me-->
     <section id="about">
+        <div id="textabout">
+            <h2>About Me</h2>
+            <p>
+                I am a motivated professional and passionated about technology who decided to end his 12 years career as Automation Engineer to pusue his dream of becoming a Full-Stack Web Developer. I am diligent, detail oriented, eager for new challenges and highly skilled in terms of problem solving and logical thinking. 
+             </p>   
+        </div>
         <img id="photo"src="./assets/images/About.jpg" width="300px">
-        <h2>About Me</h2>
-        <p>
-            I am a motivated professional and passionated about technology who decided to end his 12 years career as Automation Engineer to pusue his dream of becoming a Full-Stack Web Developer. I am diligent, detail oriented, eager for new challenges and highly skilled in terms of problem solving and logical thinking. 
-        </p>    
     </section>
 
     <!--Portfolio-->
