--- a/index.html
+++ b/index.html
@@ -32,12 +32,21 @@
 
     <!--Portfolio-->
     <section id="portfolio">
-   
+        <h2>My Portfolio</h2>
+        <img src="./assets/images/project1.png"width=800px>
+        <img src="./assets/images/project2.png"width=400px>
+        <img src="./assets/images/project3.png"width=400px>
+        <img src="./assets/images/project4.png"width=400px>
+         
     </section>
 
     <!--Contact-->
     <section id="contact">
+        <h2>My Contact:</h2>
 
+        <p>nasciutti.thiago@gmail.com<br>
+        (999)999 9999
+        </p>
     </section>
 
     
