--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <h1>Thiago Nasciutti</h1>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a class="nav-link" href="#about">About Me</a></li>
+                <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <!--About Me-->
     <section id="about">
-        <img id="photo"src="./assets/images/About.jpg" width="300px">
+        <img id="photo"src="./assets/images/About.jpg" width="300px" alt="Thiago's photo">
         <div>
             <h2>About Me</h2>
             <p>
@@ -33,10 +33,10 @@
     <!--Portfolio-->
     <section id="portfolio">
         <h2>My Portfolio</h2>
-        <img src="./assets/images/project1.png"width=800px>
-        <img src="./assets/images/project2.png"width=400px>
-        <img src="./assets/images/project3.png"width=400px>
-        <img src="./assets/images/project4.png"width=400px>
+        <a class="image-link" href="#"><img src="./assets/images/project1.png"width=800px alt="Project 1"></a>
+        <a class="image-link" href="#"><img src="./assets/images/project2.png"width=400px alt="Project 2"></a>
+        <a class="image-link" href="#"><img src="./assets/images/project3.png"width=400px alt="Project 3"></a>
+        <a class="image-link" href="#"><img src="./assets/images/project4.png"width=400px alt="Project 4"></a>
          
     </section>
 
